web commit by JonasSmedegaard: Clarify the relevant localized repositories at source.jones.dk

--- a/doc/todo/l10n.mdwn
+++ b/doc/todo/l10n.mdwn
@@ -64,5 +64,5 @@ and there is a po/ikiwiki.pot in the source that can be translated.
 
 Danish l10n of templates and basewiki is available at http://source.jones.dk/
 (using GIT - do `git clone <url> && cd <dir> && git checkout master_danish`
-for each of the repositories)
+for each of the ikiwiki_* repositories)
 --[[JonasSmedegaard]]
