web commit by AndrewGreenberg: Added the TOVA Company - hope it's ok that I added a new section heading!

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -25,6 +25,11 @@ Projects
 * The [libkdtree project](http://libkdtree.alioth.debian.org)
 * The [pcc](http://pcc.ludd.ltu.se/) (Portable C Compiler) project.  (Simple rcs backend)
 
+Companies
+=========
+
+* [The TOVA Company](http://www.tovatest.com) public site. We also use it for internal documentation and issue tracking, all with a [[rcs/Git]] backend.
+
 Personal sites and blogs
 ========================
 
