--- a/doc/todo/mailnotification/discussion.mdwn
+++ b/doc/todo/mailnotification/discussion.mdwn
@@ -1,6 +1,6 @@
-I think I would like mail notifications. Though it kinda comes out of this general fear of vandalisation really.
+I think I would like mail notifications. Though it kinda comes out of this general fear of vandalisation.
 
-So if you someone turned my wiki into a porn site, I would like to rectify it ASAP. So I would like:
+So if some 'evil doer' turned my wiki into a porn site, I would like to rectify it ASAP. So I would like:
 
 1. Mail notifications of edits not made by me (or established contributors)
 2. If there is something fishy, the steps I would need to revert the changes
