web commit by http://natalian.org/: UNDO

--- a/doc/todo/mailnotification/discussion.mdwn
+++ b/doc/todo/mailnotification/discussion.mdwn
@@ -6,3 +6,5 @@ So if some 'evil doer' turned my wiki into a porn site, I would like to rectify 
 2. If there is something fishy, the steps I would need to revert the changes
 
 Mail notifications are probably not required. For example I get lots of comments on my blog, but I don't get mailed about them. They go through the (proprietary) [Akismet](http://akismet.com/) filter.
+
+Perhaps a powerful little UNDO feature on RecentChanges is all that is needed.
