er, this was implemented over 1 year ago..

--- a/doc/todo/mailnotification/discussion.mdwn
+++ b/doc/todo/mailnotification/discussion.mdwn
@@ -8,3 +8,7 @@ So if some 'evil doer' turned my wiki into a porn site, I would like to rectify 
 Mail notifications are probably not required. For example I get lots of comments on my blog, but I don't get mailed about them. They go through the (proprietary) [Akismet](http://akismet.com/) filter.
 
 Perhaps a powerful little UNDO feature on RecentChanges is all that is needed.
+
+> Um, if you'll look at the [[mailnotification]] page, ikiwiki has
+> supported mail notifications for > 1 year, with a powerful [[PageSpec]]
+> to allow chosing which pages you want to be notified about. --[[Joey]]
