--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -146,7 +146,8 @@ This tutorial will walk you through setting up a wiki with ikiwiki.
 	`ssh`.
 
 	If at any point you commit changes in `$SRCDIR`, make sure to `git
-	push` them to the `$REPOSITORY`.
+	push` them to the `$REPOSITORY`. ikiwiki will do this automatically
+	for any changes made via the web.
 
 	Finally, see [[Git_pitfalls]] if you experience problems.
    """]]
