--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.10) UNRELEASED; urgency=low
+ikiwiki (2.10) unstable; urgency=low
 
   * Tidy ctime debug output for git.
   * French translation update. Closes: #445923
@@ -22,8 +22,10 @@ ikiwiki (2.10) UNRELEASED; urgency=low
     had to fork python for every rst page render. Note that if you use
     the rst plugin, you now need to have the RPC::XML perl module installed.
   * Danish translation from Jonas Smedegaard. Closes: #446952
+  * Support git authors of the form "joey <joey>", which is common when
+    importing from a svn repo.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 16 Oct 2007 17:53:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 20 Oct 2007 19:42:46 -0400
 
 ikiwiki (2.9) unstable; urgency=low
 
