--- a/doc/setup/git_pitfalls.mdwn
+++ b/doc/setup/git_pitfalls.mdwn
@@ -18,6 +18,5 @@ I want to collect common problems and their solutions when using Ikiwiki with Gi
 > it would go in $SRCDIR/.git/hooks/post-commit, but on second read, I see
 > that [[setup]] says it should be $REPOSITORY/hooks/post-update
 > 
-> That seems to have sorted it. Based on [[this|rcs/git/discussion]] and 
-> [[this|rcs/git/gitmanual]], I'm not the only one to trip over how to do
-> this. --[[Joey]]
+> That seems to have sorted it. Based on [[this|rcs/git/discussion]], I'm
+> not the only one to trip over how to do this. --[[Joey]]
