* Correct a pair of logic errors that triggered if svnpath was empty.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.11) UNRELEASED; urgency=low
+
+  * Correct a pair of logic errors that triggered if svnpath was empty.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Oct 2007 18:49:40 -0400
+
 ikiwiki (2.10) unstable; urgency=low
 
   * Tidy ctime debug output for git.
