--- a/doc/tips/laptop_wiki_with_git.mdwn
+++ b/doc/tips/laptop_wiki_with_git.mdwn
@@ -1,4 +1,4 @@
-Using ikiwiki with the [[git]] backend, some interesting things can be done
+Using ikiwiki with the [[rcs/git]] backend, some interesting things can be done
 with creating mirrors (or, really, branches) of a wiki. In this tip, I'll
 assume your wiki is located on a server, and you want to take a copy with
 you on your laptop.
@@ -12,7 +12,7 @@ First, set up the wiki on the server, if it isn't already. Nothing special
 needs to be done here, just follow the regular instructions in [[setup]]
 for setting up ikiwiki with git.
 
-Next, git clone the source from the server to the laptop.
+Next, `git clone` the source from the server to the laptop.
 
 Now, set up a web server on your laptop, if it doesn't already have one.
 
