--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 ikiwiki (2.11) UNRELEASED; urgency=low
 
   * Correct a pair of logic errors that triggered if svnpath was empty.
+  * If gitorigin_branch is set to the empty string, don't push or pull.
+    Useful for laptop clones of remote wikis.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 21 Oct 2007 18:49:40 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Oct 2007 20:28:16 -0400
 
 ikiwiki (2.10) unstable; urgency=low
 
