--- a/doc/todo/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
+++ b/doc/todo/calendar_--_archive_browsing_via_a_calendar_frontend.mdwn
@@ -120,3 +120,5 @@ And that's all I've heard so far. Hoping I didn't miss another patch?
 
 
 --ManojSrivastava
+
+> Finally reviewed and applied this. [[done]]! --[[Joey]]
