--- a/doc/todo/tmplvars_plugin.mdwn
+++ b/doc/todo/tmplvars_plugin.mdwn
@@ -1,5 +1,7 @@
 A simple plugin to allow per-page customization of a template by passing paramaters to HTML::Template. For those times when a whole pagetemplate is too much work. --Ethan
 
+[[tags patch]]
+
     #!/usr/bin/perl
     package IkiWiki::Plugin::tmplvars;
 
