--- a/doc/todo/htaccess_files_in_svn_repository.mdwn
+++ b/doc/todo/htaccess_files_in_svn_repository.mdwn
@@ -2,3 +2,7 @@ Hi, I would like to have my htaccess files in svn repository so ikiwiki would ex
 
 That way I have revision control on that file too. That may be a security concern, but I trust everybody that has svn commit
 access and such .htaccess files should not be accessible through wiki cgi. Of course, it could default to 'off'.
+
+> See [[debbug 447267]] for a patch for this.
+
+[[tags patch]]
