--- a/doc/todo/htaccess_files_in_svn_repository.mdwn
+++ b/doc/todo/htaccess_files_in_svn_repository.mdwn
@@ -5,4 +5,4 @@ access and such .htaccess files should not be accessible through wiki cgi. Of co
 
 > See [[debbug 447267]] for a patch for this.
 
-[[tags patch]]
+[[tag patch]]
