--- a/doc/todo/l10n.mdwn
+++ b/doc/todo/l10n.mdwn
@@ -69,3 +69,6 @@ Danish l10n of templates and basewiki is available with the following commands:
     make all
 
 --[[JonasSmedegaard]]
+
+> How do you plan to keep these translations up-to-date as changes are made
+> to ikiwiki? --[[Joey]]
