any progress on this?

--- a/doc/todo/wikiwyg/discussion.mdwn
+++ b/doc/todo/wikiwyg/discussion.mdwn
@@ -148,4 +148,10 @@ that needs to be changed. I'd be honored to have my code merged with IkiWiki :)
 
 --[[TaylorKillian]]
 
+I wonder if you've had a chance to make any of the remaining changes above?
+Even just some of the smaller changes would be much easier for you to
+do than for me, and it would be nice to get them sorted out before I
+merge it into ikiwiki. --[[Joey]
+
+
 [Revision 3840]: http://ikiwiki.info/cgi-bin/viewvc.cgi?view=rev&root=ikiwiki&revision=3840
