prototype.js is non-free

--- a/doc/todo/Gallery.mdwn
+++ b/doc/todo/Gallery.mdwn
@@ -60,3 +60,13 @@ For any feedback or query, feel free to mail me at arpitjain11 [AT] gmail.com
 Additional details are available [here](http://myweb.unomaha.edu/~ajain/ikiwikigallery.html).
 
 [[tag patch]]
+
+> I'd love to merge this into ikiwiki.
+> 
+> However, lightbox.js is licensed under a non-free (Creative Commons) license. :-(
+> 
+> Since I don't much like the lightbox effects anyway (too much resizing
+> motion, too slow), I wonder if another template could be added, perhaps
+> a free one? 
+> 
+> --[[Joey]]
