--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -1,7 +1,7 @@
 This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
-Do re me fa so la te git!
+Do re me fa so la te.. git!
 
 # テスト。
 
