leave discussion pages out of the sanebox blog

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -106,9 +106,6 @@ span also doesn't work:
 
 ----
 
-
-aaaaaaaaaaaaaaaa
-
 This sandbox is also a [[blog]]!
 
-[[inline pages="sandbox/*" rootpage="sandbox" show="4" archive="yes"]]
+[[inline pages="sandbox/* and !*/Discussion" rootpage="sandbox" show="4" archive="yes"]]
