--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ ikiwiki (2.11) UNRELEASED; urgency=low
     calculations (I hope.)
   * Removed manual ctime statting code, and just have the calendar plugin use
     %pagectime.
+  * Ikiwiki has moved into a git repository.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 22 Oct 2007 18:24:00 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 24 Oct 2007 22:19:31 -0400
 
 ikiwiki (2.10) unstable; urgency=low
 
