--- a/doc/download.mdwn
+++ b/doc/download.mdwn
@@ -32,28 +32,20 @@ Also. FreeBSD has ikiwiki in its
 
 ## revision control
 
-### subversion
-
-The current development version of ikiwiki can be accessed using subversion at 
-`svn://ikiwiki.info/ikiwiki/trunk`
-
-The source in subversion can be browsed
-[here](http://ikiwiki.info/cgi-bin/viewvc.cgi/trunk/?root=ikiwiki).
-
-Commits to ikiwiki's source code are now fed into
-[CIA](http://cia.vc), and can be browsed, subscribed to etc on its
-[project page](http://cia.vc/stats/project/ikiwiki). Note that changes
-to the documentation wiki are currently excluded.
-
 ### git
 
-A git mirror of the trunk of the subversion repository is available at
-`git://ikiwiki.info/` and also at <http://ikiwiki.info/ikiwiki.git/>.
-It is updated using `git-svnimport` whenever changes are committed to the
-subversion repository.
+Ikiwiki is developed in a git repository and can be checked out by
+either of these commands:
 
-### arch
+	git clone git://git.ikiwiki.info/
+	git clone http://git.ikiwiki.info/ikiwiki.git/
 
-An unofficial arch mirror of the subversion repository is at
-<http://arch.debian.org/arch/private/srivasta/archive-2006-misc>
-and can be browsed [here](http://arch.debian.org/cgi-bin/archzoom.cgi/srivasta@debian.org--2006-misc?color=default?layout=larger?expand).
+The gitweb is [here](http://git.ikiwiki.info/?p=ikiwiki).
+
+Commits to this git repository are fed into [CIA](http://cia.vc), and can
+be browsed, subscribed to etc on its
+[project page](http://cia.vc/stats/project/ikiwiki).
+
+### subversion
+
+Ikiwiki's subversion repository is no longer available, use git instead.
