I've added a gallery branch to git containing the latest version of this plugin

--- a/doc/todo/Gallery.mdwn
+++ b/doc/todo/Gallery.mdwn
@@ -69,4 +69,7 @@ Additional details are available [here](http://myweb.unomaha.edu/~ajain/ikiwikig
 > motion, too slow), I wonder if another template could be added, perhaps
 > a free one? 
 > 
+> Now that ikiwiki is in git, I've downloaded the most recenty version of
+> the gallery and put it in a "gallery" branch of my git repository.
+> 
 > --[[Joey]]
