web commit by http://harningt.myopenid.com/

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -80,6 +80,7 @@ Personal sites and blogs
 * [Paul Wise's homepage and blog](http://bonedaddy.net/pabs3/)
 * [Martin's PhD wiki](http://phd.martin-krafft.net/wiki)
 * [David Riebenbauer's page](http://liegesta.at/)
+* [Thomas Harning's 'eHarning' wiki](http://www.eharning.us/wiki/)
 
 Please feel free to add your own ikiwiki site!
 
