--- a/doc/bugs/prune_causing_taint_mode_failures.mdwn
+++ b/doc/bugs/prune_causing_taint_mode_failures.mdwn
@@ -31,3 +31,5 @@ sub prune ($) { #{{{
 > Old versions of perl are known to have bugs with taint checking.
 > I don't really support using ikiwiki with the perl 5.8.4 in debian
 > oldstable, and would recommend upgrading. --[[Joey]]
+
+[[tag patch done]]
