--- a/doc/todo/Location_of_pages_starting_with___36__tagbase_should_be_in__by_default.mdwn
+++ b/doc/todo/Location_of_pages_starting_with___36__tagbase_should_be_in__by_default.mdwn
@@ -6,4 +6,6 @@ subpage: `<current>/$tagbase/<tagname>`.
 > footer, or is added with a taglink directive. Think that's good enough?
 > --[[Joey]]
 
+See also: [[bugs/tags_base_dir_not_used_when_creating_new_tags]]
+
 [[tag wishlist]]
