--- a/doc/todo/A_page_that_inlines_pages__61____34____42____34___results_in_unnecessary_feed_generation.mdwn
+++ b/doc/todo/A_page_that_inlines_pages__61____34____42____34___results_in_unnecessary_feed_generation.mdwn
@@ -15,6 +15,8 @@ contains \[[inline pages="*"]].
 > N+1th page that its PageSpec matches is a no-op.
 > --[[Joey]]
 
+[[tag done]]
+
 Here's a short script for replicating the bug. Just cut and paste this
 to a shell, (it will only muck in a new /tmp/ikiwiki-test directory
 that it will create):
