--- a/doc/rcs.mdwn
+++ b/doc/rcs.mdwn
@@ -6,8 +6,8 @@ histories.
 Ikiwiki started out supporting only [[Subversion|svn]], but the interface
 ikiwiki uses to a revision control system is sufficiently simple and
 generic that it can be adapted to work with many systems by writing a
-[[plugin|plugins/write]]. [[Subversion|svn]] is still a recommended choice
-(since [[Joey]] uses it); [[git]] is another well-tested option.
+[[plugin|plugins/write]]. [[Subversion|svn]] is still a recommended choice;
+[[git]] is another well-tested option.
 
 These are all the supported revision control systems:
 [[inline pages="rcs/* and !*/Discussion and !rcs/details" archive=yes]]
