--- a/doc/bugs/multiple_rss_feeds_per_page.mdwn
+++ b/doc/bugs/multiple_rss_feeds_per_page.mdwn
@@ -17,3 +17,15 @@ Josh Triplett suggests that the inline macro should take a parameter for the fee
 > 
 > The result was that my whatsnew feed actually contains my Words2Nums
 > feed, or something. --[[joey]]
+
+> I've implemented autoincrementing unique feeds, the first one on a page
+> is a .rss, next is .rss2, etc.
+> 
+> There may be room for manual specification of feed basenames, but it is tricky to do that
+> well. One problem is that if page foo adds a feed with basename bar,
+> the resulting "foo_bar.rss" would have the same name as a feed for page
+> foo_bar. (Assuming usedirs is not set.) This is also why I stuck the
+> number on the end of the filename extension -- it's slightly ugly, but
+> it avoids all such naming ambiguities.
+> 
+> Anyway, I think this is [[done]] --[[Joey]]
