* ikiwiki-mass-rebuild: Patch from HenrikBrixAndersen to fix order   of permissions dropping code to work on FreeBSD.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,10 @@ ikiwiki (2.11) UNRELEASED; urgency=low
   * Add handling of feeds for nested inlines, as well as support for a
     single page containing two different feeds.
   * Also fixed some places in inline that failed to use destpage correctly.
+  * ikiwiki-mass-rebuild: Patch from HenrikBrixAndersen to fix order 
+    of permissions dropping code to work on FreeBSD.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 25 Oct 2007 05:14:58 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 25 Oct 2007 07:52:43 -0400
 
 ikiwiki (2.10) unstable; urgency=low
 
