--- a/doc/bugs/ikiwiki-mass-rebuild_fails_to_drop_privileges_and_execute_ikiwiki.mdwn
+++ b/doc/bugs/ikiwiki-mass-rebuild_fails_to_drop_privileges_and_execute_ikiwiki.mdwn
@@ -6,6 +6,8 @@ The solution is to set the effective UID after setting the real UID, and to set 
 
 > > It doesn't - it needs to be set. The line with `%ENV=();` clears the environment, thus no `$PATH` is set. --[[HenrikBrixAndersen]]
 
+> > > I guess it shouldn't clear it then. Both [[done]] --[[Joey]]
+
 Proposed patch:
 
     --- ikiwiki-mass-rebuild.orig	2007-08-15 22:21:59.000000000 +0200
