--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.11) UNRELEASED; urgency=low
+ikiwiki (2.11) unstable; urgency=low
 
   * Correct a pair of logic errors that triggered if svnpath was empty.
   * If gitorigin_branch is set to the empty string, don't push or pull.
@@ -22,7 +22,7 @@ ikiwiki (2.11) UNRELEASED; urgency=low
   * Run git-commit -q (though it doesn't do much good due to its stderr
     abuse).
 
- -- Joey Hess <joeyh@debian.org>  Thu, 25 Oct 2007 23:11:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 26 Oct 2007 03:29:09 -0400
 
 ikiwiki (2.10) unstable; urgency=low
 
