web commit by tschwinge: Bug when toggling in a preview page

--- a/doc/plugins/toggle/discussion.mdwn
+++ b/doc/plugins/toggle/discussion.mdwn
@@ -25,3 +25,10 @@ Ikiwiki fails to render the line break between *foo* and *bar* when the followin
 
 
 ## bar
+
+
+# Bug when toggling in a preview page
+
+When toggling an item while being in a web-editing session in the *Preview* frame,
+you'll lose the context of the editing session and will be directed to the wiki's
+main page instead.
