web commit by tschwinge: But not visible here, but in the Hurd wiki.

--- a/doc/plugins/toggle/discussion.mdwn
+++ b/doc/plugins/toggle/discussion.mdwn
@@ -28,6 +28,10 @@ Ikiwiki fails to render the line break between *foo* and *bar* when the followin
 
 --[[tschwinge]]
 
+For some reason, this problem is not visible here.  You can see the problem on
+<http://www.bddebian.com/~wiki/microkernel/mach/gnumach/hardwarecompatibilitylist/>.
+Scroll down to *Storage* and use the *SATA drives ...* toggle.  --[[tschwinge]]
+
 
 # Bug when toggling in a preview page
 
