analise one not-our-bugissue, move the other to a bug report page

--- a/doc/plugins/toggle/discussion.mdwn
+++ b/doc/plugins/toggle/discussion.mdwn
@@ -32,9 +32,9 @@ For some reason, this problem is not visible here.  You can see the problem on
 <http://www.bddebian.com/~wiki/microkernel/mach/gnumach/hardwarecompatibilitylist/>.
 Scroll down to *Storage* and use the *SATA drives ...* toggle.  --[[tschwinge]]
 
+> This seems to be a bug in your wiki's style sheet. Download the page and
+> view it without a stylesheet and the web browser renders it fine. --[[Joey]]
 
 # Bug when toggling in a preview page
 
-When toggling an item while being in a web-editing session in the *Preview* frame,
-you'll lose the context of the editing session and will be directed to the wiki's
-main page instead.  --[[tschwinge]]
+Moved to [[bug_when_toggling_in_a_preview_page]] --[[Joey]]
