* Fix some issues with toggles in preview mode.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ikiwiki (2.12) UNRELEASED; urgency=low
+
+  * Fix some issues with toggles in preview mode.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 29 Oct 2007 17:15:04 -0400
+
 ikiwiki (2.11) unstable; urgency=low
 
   * Correct a pair of logic errors that triggered if svnpath was empty.
