web commit by tschwinge

--- a/doc/plugins/contrib/gallery/discussion.mdwn
+++ b/doc/plugins/contrib/gallery/discussion.mdwn
@@ -17,3 +17,5 @@ When using `vcs="1"` it's no better:
     $ ikiwiki [...] --plugin gallery web web.rendered
     scanning index.mdwn
     internal error: b/800x600-1.jpg cannot be found in web or underlay
+
+--[[tschwinge]]
