web commit by http://arpitjain11.myopenid.com/

--- a/doc/plugins/contrib/gallery/discussion.mdwn
+++ b/doc/plugins/contrib/gallery/discussion.mdwn
@@ -19,3 +19,12 @@ When using `vcs="1"` it's no better:
     internal error: b/800x600-1.jpg cannot be found in web or underlay
 
 --[[tschwinge]]
+
+For the time being, you can turn resizing off till I look into conditional underlay directory feature. 
+
+USAGE : [[gallery imagedir="directory" resize="0"]]
+
+New version updated at SVN REPO : http://ned.snow-crash.org:8080/svn/ikiwiki-gallery/
+
+--[[arpitjain]]
+
