--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 ikiwiki (2.12) UNRELEASED; urgency=low
 
   * Fix some issues with toggles in preview mode.
+  * Fix an aggregate plugin expiry bug. Over time, it's possible for the same
+    page name to be expired and reused for several distinct guids. When this
+    happened, the expiry code counted each past guid that had used that page
+    name as a currently existing page, and thus expired too many pages.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 29 Oct 2007 17:15:04 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 30 Oct 2007 22:47:36 -0400
 
 ikiwiki (2.11) unstable; urgency=low
 
