--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,11 @@ ikiwiki (2.12) UNRELEASED; urgency=low
     stay the same for the duration of the function.
   * Avoid using commands like git-diff and instead use "git diff".
     In some configurations, only the main git command is in the path.
+  * Improve the RecentChanges display for git merges, by passing -c instead
+    of -m to git-log, and by skipping display of commits that change no
+    pages.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 31 Oct 2007 17:34:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 31 Oct 2007 18:30:54 -0400
 
 ikiwiki (2.11) unstable; urgency=low
 
