--- a/debian/changelog
+++ b/debian/changelog
@@ -12,8 +12,10 @@ ikiwiki (2.12) UNRELEASED; urgency=low
   * Improve the RecentChanges display for git merges, by passing -c instead
     of -m to git-log, and by skipping display of commits that change no
     pages.
+  * Don't truncate git commit messages to the first line in RecentChanges,
+    show the full message.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 31 Oct 2007 18:30:54 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 31 Oct 2007 18:34:51 -0400
 
 ikiwiki (2.11) unstable; urgency=low
 
