web commit by JonasSmedegaard: Homebase and Kaospilotene use ikiwiki for support websites.

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -81,6 +81,7 @@ Personal sites and blogs
 * [Martin's PhD wiki](http://phd.martin-krafft.net/wiki)
 * [David Riebenbauer's page](http://liegesta.at/)
 * [Thomas Harning's 'eHarning' wiki](http://www.eharning.us/wiki/)
+* Technical support websites for [Homebase](http://support.homebase.dk) and [Kaospilotene](http://support.kaospilot.no) (each with [source](http://source.homebase.dk/) [provided](http://source.kaospilot.no/))
 
 Please feel free to add your own ikiwiki site!
 
